making icons clickable and adjusting spacing to make sure page is responsive

--- a/scss/main-layout/_benefits-section.scss
+++ b/scss/main-layout/_benefits-section.scss
@@ -8,7 +8,7 @@
     @include mixin.respond(tablet) {
         padding: 5%;
         padding-top: 10%;
-        padding-bottom: 25%;
+        padding-bottom: 20%;
         grid-template-columns: 1.4fr 0.8fr;
     }
     @include mixin.respond(mobile) {
