--- a/scss/main-layout/_footer.scss
+++ b/scss/main-layout/_footer.scss
@@ -33,6 +33,7 @@
 // font awesome icons 
 .fa-brands {
    font-size: 1.5rem;
+   color: white;
 }
 .footer-copyright__text {
     opacity: 0.7;
