--- a/scss/main-layout/_header.scss
+++ b/scss/main-layout/_header.scss
@@ -62,3 +62,10 @@
         padding: 1.5rem;
     }
 }
+.button__container {
+    background-color: transparent;
+    border: none;
+    @include mixin.respond(desktop) {
+        display: none;
+    }
+}
