--- a/scss/main-layout/_main.scss
+++ b/scss/main-layout/_main.scss
@@ -3,7 +3,6 @@
 
 .main__container {
     height: 100%;
-    width: 100vw;
     display: grid;
     font-family: util.$font-main;
 }
